--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.github.starlangsoftware</groupId>
+    <groupId>io.github.barbaros-durusoy</groupId>
     <artifactId>WordSenseDisambiguationCustom</artifactId>
     <version>1.0.4.custom</version>
     <packaging>jar</packaging>
