--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.github.barbaros-durusoy</groupId>
-    <artifactId>WordSenseDisambiguationCustom</artifactId>
+    <groupId>io.github.starlangsoftware</groupId>
+    <artifactId>WordSenseDisambiguation</artifactId>
     <version>1.0.4.custom</version>
     <packaging>jar</packaging>
 
@@ -81,6 +81,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
                 <version>1.6</version>
                 <executions>
                     <execution>
@@ -109,6 +112,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
+                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                     <source>8</source>
                 </configuration>
                 <version>2.9.1</version>
